<resources>
    <string name="app_name">RecepieFinder</string>
    <string name="k_premium_r">100K+ Premium Recipe</string>
    <string name="header_title">Get\nCooking</string>
    <string name="start_cooking_txt">Start Cooking</string>
    <string name="caption">Simple way to find Tasty Recipe</string>
    <string name="todo">TODO</string>
    <string name="hello_">Hello,</string>
    <string name="welcome_bac">Welcome Back!</string>
    <string name="email">Email</string>
    <string name="enter_your_email"><font size="14">Enter your email</font></string>
    <string name="password">Password</string>
    <string name="enter_your_password"><font size="14">Enter your password</font></string>
    <string name="retype__password"><font size="14">Retype your password</font></string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">Sign In</string>
    <string name="or">OR</string>
    <string name="don_t_have_an_account_sign_up">Don’t have an account? <font color="#FF9C00">Sign up</font> </string>
    <string name="create_an_account">Create an account</string>
    <string name="let_s_help_you_set_up_your_account_it_won_t_take_long">Let’s help you set up your account, it won’t take long.</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="already_a_member_sign_in">Already a member? <font color="#FF9C00">Sign In</font></string>
    <string name="enter_your_name"><font size="14">Enter your name</font></string>
    <string name="what_are_you_cooking_today">What are you cooking today?</string>
    <string name="search_for_recipes"><font size="14">Search for recipes</font></string>
    <string name="time">Time</string>
    <string name="_10_mins">10 Mins</string>
    <string name="no_results_found">No Results Found</string>
    <string name="description">No recipies found. Please try again</string>
</resources>