<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <RelativeLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/secondaryColor">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_centerInParent="true">

            <ImageView
                android:id="@+id/search_icon"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/search_no_result"
                android:contentDescription="@string/todo" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_results_found"
                android:textSize="24sp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/poppins_medium"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="18sp"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins_light"
                android:text="@string/description"/>


        </LinearLayout>

    </RelativeLayout>



</RelativeLayout>