<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.SplashScreenActivity">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/splash_screen_bg"
        android:scaleType="centerCrop"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="80dp"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            tools:ignore="UseCompoundDrawables,UselessParent">

            <ImageView
                android:layout_width="79dp"
                android:layout_height="79dp"
                android:src="@drawable/shef_cap_icon"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/k_premium_r"
                android:textColor="@color/white"
                android:textSize="18sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_above="@id/start_cooking_btn"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="80dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/header_title"
                android:textAlignment="center"
                android:textSize="50sp"
                android:textColor="@color/white"
                android:fontFamily="@font/poppins_medium"
                android:lineSpacingExtra="-15sp"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/poppins_light"
                android:text="@string/caption"
                android:textSize="18sp"
                android:textColor="@color/white"/>

        </LinearLayout>
       <android.widget.Button
           android:id="@+id/start_cooking_btn"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignParentBottom="true"
           android:layout_centerHorizontal="true"
           android:text="@string/start_cooking_txt"
           android:layout_marginBottom="50dp"
           android:paddingHorizontal="50dp"
           android:paddingVertical="15dp"
           style="@style/buttonStyle" />

    </RelativeLayout>

</RelativeLayout>







